--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "pg": "4.x"
   },
   "repository": {
     "type": "git",
