--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "express": "4.13.3",
-    "pg": "4.x"
+    "pg": "4.x",
+    "body-parser": "1.x"
   },
   "repository": {
     "type": "git",
